...

        override fun authenticatedCookies(): Map<String, String> = AccountData.data.cookies

        override fun xsrfToken(): String = AccountData.data.cookies["_xsrf"] ?: ""

        override suspend fun handleFetchFailure(
            tag: String?,
            error: Exception,
        ) {
            Log.e(tag ?: "ZhihuApiEnvironment", "Failed to fetch Zhihu API", error)
        }
    }
}
...
